changed index and about page

--- a/html/about.html
+++ b/html/about.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About | Next Digital Studio</title>
+  <title>Next Digital Studio | About</title>
   <link rel="shortcut icon" type="image/png" href="../img/favicon2.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-  <img src="../img/bar.jpg" alt="bar" id="bar">
   <div id="search" class="s-none">
     <div>
       <div class="title-section">
@@ -35,21 +34,46 @@
     </div>
   </div>
   <nav id="mainnav">
-        <div class="container">
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a class="active" href="about.html">About</a></li>
-                <li><a href="products.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li style="float:right" id="search-btn"><a href="#"><i class="fa fa-search"></i></a></li>
-            </ul>
-        </div>
-    </nav>
-    <div id="bottomNav">
-      <div class="container">
-        <a href="../index.html"><i class="fa fa-home"></i></a><i class="fa fa-angle-right"></i>About
+    <div class="container">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a class="active" href="about.html">About</a></li>
+        <li><a href="products.html">Services</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li style="float:right" id="search-btn"><a href="#"><i class="fa fa-search"></i></a></li>
+      </ul>
+    </div>
+  </nav>
+  <div id="bottomNav">
+    <div class="container">
+      <a href="../index.html"><i class="fa fa-home"></i></a><i class="fa fa-angle-right"></i>About
+    </div>
+  </div>
+  <div id="about">
+    <div class="container">
+      <div class="title-section">
+        <h3>About Next Digital Studio</h3>
+      </div>
+      <p><b>Welcome to Next Digital Studio, the solution for all your digital needs!</b></p>
+      <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+      <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+    </div>
+  </div>
+  <div id="tycho">
+    <div class="container">
+      <div class="title-section">
+        <h3>Tycho Verstraete</h3>
       </div>
     </div>
+  </div>
+  <div id="jonas">
+    <div class="container">
+      <div class="title-section">
+        <h3>Jonas Del Turco</h3>
+      </div>
+    </div>
+  </div>
   <!-- <div class="policy">
     <div>
       <p>By entering this site you accept the use of <a href="html/cookies.html">cookies</a></p><a id="policy"><i class="fa fa-times"></i></a>
