--- a/html/cookies.html
+++ b/html/cookies.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cookies | Next Digital Studio</title>
+  <title>Next Digital Studio | Cookies</title>
   <link rel="shortcut icon" type="image/png" href="../img/favicon2.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <img src="../img/bar.jpg" alt="bar" id="bar">
+  <!-- <img src="../img/bar.jpg" alt="bar" id="bar"> -->
   <div id="search" class="s-none">
     <div>
       <div class="title-section">
@@ -40,6 +40,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="products.html">Services</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li style="float:right" id="search-btn"><a href="#"><i class="fa fa-search"></i></a></li>
             </ul>
@@ -48,6 +49,13 @@
     <div id="bottomNav">
       <div class="container">
         <a href="../index.html"><i class="fa fa-home"></i></a><i class="fa fa-angle-right"></i>Cookies
+      </div>
+    </div>
+    <div id="cookies">
+      <div class="container">
+        <div class="title-section">
+          <h3>Cookies</h3>
+        </div>
       </div>
     </div>
   <!-- <div class="policy">
