--- a/html/products.html
+++ b/html/products.html
@@ -57,11 +57,11 @@
       </div>
       </div>
   </div>
-  <div class="policy">
+  <!-- <div class="policy">
     <div>
       <p>By entering this site you accept the use of <a href="html/cookies.html">cookies</a></p><a id="policy"><i class="fa fa-times"></i></a>
     </div>
-  </div>
+  </div> -->
 </body>
 
 </html>
