--- a/html/about.html
+++ b/html/about.html
@@ -28,7 +28,7 @@
       </form>
     </div>
   </div>
-  <div class="topNav">
+  <div class="topNav negBack">
     <div class="container">
       <a href="../index.html"><img src="../img/logo4.png" alt="logo"></a>
     </div>
@@ -60,7 +60,7 @@
       <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
     </div>
   </div>
-  <div id="tycho">
+  <div id="tycho" class="negBack">
     <div class="container">
       <div class="title-section">
         <h3>Tycho Verstraete</h3>
