--- a/html/products.html
+++ b/html/products.html
@@ -28,7 +28,7 @@
       </form>
     </div>
   </div>
-  <div class="topNav">
+  <div class="topNav negBack">
     <div class="container">
       <a href="../index.html"><img src="../img/logo4.png" alt="logo"></a>
     </div>
