--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -7,13 +7,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Next Digital Studio | About</title>
   <link rel="shortcut icon" type="image/png" href="../img/favicon2.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/style.css">
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
   <script src="../js/script.js" charset="utf-8"></script>
 </head>
 
@@ -55,7 +62,57 @@
       <div class="title-section">
         <h3>Portfolio</h3>
       </div>
+      <h4>Webdevelopment</h4>
+      <div class="row scroll">
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
       </div>
+      <div class="row negBack tileInfo">
+          <div class="col-md-3 tile"></div>
+          <div class="col-md-1"></div>
+          <div class="col-md-7">
+            <div>
+              <div class="title-section">
+                <h3>Project</h3>
+              </div>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate
+                velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                culpa qui officia deserunt mollit anim id est laborum.
+                <br>
+                <span>Made by: Author</span>
+              </p>
+              <button>see details</button>
+            </div>
+          </div>
+        </div>
+      <hr>
+      <h4>Wordperss sites</h4>
+      <div class="row scroll">
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+        <div class="col-md-2 tile"></div>
+      </div>
+    </div>
   </div>
   <!-- <div class="policy">
     <div>
