--- a/html/contact.html
+++ b/html/contact.html
@@ -7,13 +7,20 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Next Digital Studio | About</title>
   <link rel="shortcut icon" type="image/png" href="../img/favicon2.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/style.css">
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+  </script>
   <script src="../js/script.js" charset="utf-8"></script>
 </head>
 
@@ -53,10 +60,60 @@
   <div id="contact">
     <div class="container">
       <div class="title-section">
-        <h3>Contact</h3>
+        <h3>Where are we located?</h3>
       </div>
+      <p>Erasmus University College Brussels</p>
+      <div id="maps">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2519.402037459867!2d4.3206193160763116!3d50.842238979531324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c40f19faf0f9%3A0x4ef5b683135ecb1e!2sErasmushogeschool%20Brussel!5e0!3m2!1sen!2sbe!4v1573639289798!5m2!1sen!2sbe"
+          frameborder="0" style="border:0;" allowfullscreen=""></iframe>
       </div>
+      <div class="title-section">
+        <h3>Contact us here</h3>
+      </div>
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputname4">Full Name</label>
+            <input type="text" class="form-control" id="inputname4" placeholder="Name">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="inputSubject">Subject</label>
+          <input type="text" class="form-control" id="inputSubject" placeholder="I have a project">
+        </div>
+        <div class="form-group">
+          <label for="inputMessage">Message</label>
+          <textarea class="form-control" name="message" id="message" placeholder="Type message here.."
+            rows="12"></textarea>
+        </div>
+        <input type="submit" class="btn btn-primary" value="Send message">
+      </form>
+    </div>
   </div>
+  <footer>
+      <div class="container">
+        <div class="title-section">
+          <h3>Stay Connected</h3>
+        </div>
+        <div class="fsocial">
+          <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+          <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+          <a href="#" class="google"><i class="fa fa-google"></i></a>
+          <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+          <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+        </div>
+      </div>
+    </footer>
+    <div class="footer2">
+      <div class="container">
+        <p>Developed by <a href="#">Next Digital Studio</a></p>
+      </div>
+    </div>
   <!-- <div class="policy">
     <div>
       <p>By entering this site you accept the use of <a href="html/cookies.html">cookies</a></p><a id="policy"><i class="fa fa-times"></i></a>
