--- a/html/about.html
+++ b/html/about.html
@@ -38,7 +38,7 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a class="active" href="about.html">About</a></li>
-        <li><a href="products.html">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li style="float:right" id="search-btn"><a href="#"><i class="fa fa-search"></i></a></li>
