--- a/html/contact.html
+++ b/html/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Next Digital Studio | About</title>
+  <title>Next Digital Studio | Contact</title>
   <link rel="shortcut icon" type="image/png" href="../img/favicon2.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -45,7 +45,7 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="products.html">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a class="active" href="contact.html">Contact</a></li>
         <li style="float:right" id="search-btn"><a href="#"><i class="fa fa-search"></i></a></li>
