--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../css/lightslider.css">
   <link rel="stylesheet" href="../css/style.css">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -21,6 +22,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
+  <script src="../js/lightslider.js"></script>
   <script src="../js/script.js" charset="utf-8"></script>
 </head>
 
@@ -45,7 +47,7 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="products.html">Services</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a class="active" href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li style="float:right" id="search-btn"><a href="#"><i class="fa fa-search"></i></a></li>
@@ -63,17 +65,19 @@
         <h3>Portfolio</h3>
       </div>
       <h4>Webdevelopment</h4>
-      <div class="row scroll">
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
+      <div class="row light-slider">
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
       </div>
       <div class="row negBack tileInfo">
         <div class="col-md-3 tile"></div>
@@ -100,7 +104,7 @@
       </div>
       <hr>
       <h4>Wordperss sites</h4>
-      <div class="row scroll">
+      <div class="row light-slider">
         <div class="col-md-2 tile"></div>
         <div class="col-md-2 tile"></div>
         <div class="col-md-2 tile"></div>
