--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -47,8 +47,8 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
         <li><a class="active" href="portfolio.html">Portfolio</a></li>
+        <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li style="float:right" id="search-btn"><a href="#"><i class="fa fa-search"></i></a></li>
       </ul>
@@ -105,16 +105,18 @@
       <hr>
       <h4>Wordperss sites</h4>
       <div class="row light-slider">
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
-        <div class="col-md-2 tile"></div>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
+        <a href=""><div class="tile"></div></a>
       </div>
       <hr>
     </div>
