--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="html/about.html">About</a></li>
-        <li><a href="html/services.html">Services</a></li>
         <li><a href="html/portfolio.html">Portfolio</a></li>
+        <li><a href="html/blog.html">Blog</a></li>
         <li><a href="html/contact.html">Contact</a></li>
         <li style="float:right" id="search-btn"><a><i class="fa fa-search"></i></a></li>
       </ul>
