small texts on homepage
Wordpress, Hardware & Automatisation

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="title-section">
               <h3>Wordperss sites</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <p>For self-maintainable websites with a user-friendly dashboard, Wordpress is the ideal choice for you. You can choose from thousands of themes which will give you a good idea in advance of what your site will look like.</p>
             <button type="button" name="button">Read More</button>
           </div>
         </div>
@@ -88,7 +88,7 @@
             <div class="title-section">
               <h3>Hardware</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <p>You can come to us for all kinds of hardware related matters. From a broken laptop to building your own desktop of your dreams. We are also happy to help you reset your laptop or install a new operating system.</p>
             <button type="button" name="button">Read More</button>
           </div>
         </div>
@@ -100,7 +100,7 @@
             <div class="title-section">
               <h3>Automatisation</h3>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <p>With automation we mean automating repetitive tasks that need to be carried out in your company. This can be very broad and can come in different forms. Please click the button below for more information.</p>
             <button type="button" name="button">Read More</button>
           </div>
         </div>
