--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="title-section">
               <h3>Wordperss sites</h3>
             </div>
-            <p>For self-maintainable websites with a user-friendly dashboard, Wordpress is the ideal choice for you. You can choose from thousands of themes which will give you a good idea in advance of what your site will look like.</p>
+            <p>For self-maintainable websites with a user-friendly dashboard, Wordpress is the ideal choice for you. You can choose from thousands of themes which will give you a good idea of what your site will look like.</p>
             <button type="button" name="button">Read More</button>
           </div>
         </div>
