added services tab

--- a/html/about.html
+++ b/html/about.html
@@ -39,6 +39,7 @@
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a class="active" href="about.html">About</a></li>
+        <li><a href="services.html">Services</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -56,7 +57,7 @@
       <div class="title-section">
         <h3>About Next Digital Studio</h3>
       </div>
-      <p><b>Welcome to Next Digital Studio, the solution for all your digital needs!</b></p>
+      <p><b>Welcome to Next Digital Studio, the solution for all your digital needs and much more!</b></p>
       <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
       <p>Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
     </div>
