--- a/html/blog.html
+++ b/html/blog.html
@@ -61,6 +61,7 @@
         <ul>
           <li><a href="../index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a class="active" href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -79,14 +80,11 @@
     <div id="services">
       <div class="container">
         <div class="title-section">
-          <h3>Blog</h3>
+          <h3>Featured posts</h3>
         </div>
-        <div class="ndscode negBack">
-          <p>
-            <span class="code">&lt;section&gt;</span
-            ><span>dit is een section</span
-            ><span class="code">&lt;/section&gt;</span>
-          </p>
+
+        <div class="title-section">
+          <h3>Hardware reviewer</h3>
         </div>
       </div>
     </div>
