--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
         <li><a href="html/about.html">About</a></li>
+        <li><a href="html/services.html">Services</a></li>
         <li><a href="html/portfolio.html">Portfolio</a></li>
         <li><a href="html/blog.html">Blog</a></li>
         <li><a href="html/contact.html">Contact</a></li>
@@ -53,6 +54,7 @@
       <div>
         <div class="title-section">
           <h3></h3>
+          <h4>The solution for all your digital needs and more</h4>
         </div>
         <button type="button" name="button">View Services</button>
         <button type="button" name="button">Contact</button>
@@ -88,7 +90,7 @@
             <div class="title-section">
               <h3>Hardware</h3>
             </div>
-            <p>You can come to us for all kinds of hardware related matters. From a broken laptop to building your own desktop of your dreams. We are also happy to help you reset your laptop or install a new operating system.</p>
+            <p>From fixing a broken laptop to help building your own desktop of your dreams. This is what we will help you with.To help you find the laptop / desktop you desire the most, take a look at our <a href="#">Hardware Review Page</a></p>
             <button type="button" name="button">Read More</button>
           </div>
         </div>
